--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -22,9 +22,9 @@
 							{{content}}
 							<div>
 								<h2>Activity Feed</h2>
-								<div class="feed"><img src="https://hackers.nyc3.digitaloceanspaces.com/load.gif"></div>
+								<div class="feed"><img class="loader" src="https://hackers.nyc3.digitaloceanspaces.com/load.gif"></div>
 								<h2>Our Repositories</h2>
-								<div class="repos"><img src="https://hackers.nyc3.digitaloceanspaces.com/load.gif"></div>
+								<div class="repos"><img class="loader" src="https://hackers.nyc3.digitaloceanspaces.com/load.gif"></div>
 							</div>
 
 						</div>
