--- a/tag.hbs
+++ b/tag.hbs
@@ -8,10 +8,12 @@
 			{{> sidebar}}
 			<!-- start main post area -->
 			<div class="col-md-8 main-content">
+				<div class="postlist">
 				{{> cover-tag}}
 				{{> loop}}
 				{{pagination}}
 			</div>
+		</div>
 			<!-- end main post area -->
 		</div>
 	</div>
