--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -335,8 +335,7 @@ pre {
 	background: url("https://hackers.nyc3.digitaloceanspaces.com/head.jpg") center center;
 	background-size: cover;
 	@media(max-width: 800px) {
-		padding: 30px 0;
-		background: @theme-color;
+		padding: 50px 0;
 	}
 
 	.branding {
@@ -351,6 +350,10 @@ pre {
 		img {
 			width: 400px;
 			max-width: 80%;
+
+			@media(max-width: 800px) {
+				 width: 250px;
+			}
 		}
 	}
 }
@@ -378,10 +381,10 @@ pre {
 
 	.menu {
 		padding: 0;
-		margin: 0 auto;
+		margin: 20px auto 0;
 		display: flex;
 		justify-content: space-between;
-		max-width: 400px;
+		max-width: 250px;
 
 		li {
 			list-style: none;
@@ -413,9 +416,13 @@ pre {
 			}
 
 			&.nav-current {
+				@media(max-width: 600px) {
+					padding: 0;
+				}
 				a {
 					color: #2a3371;
-					font-weight: 600;
+					font-weight: 100;
+					    font-size: 17px;
 				}
 			}
 
@@ -873,6 +880,7 @@ pre {
 .about-author {
 	background: @white;
 	padding: 20px;
+	margin:10px 0;
 
 	.avatar {
 		width: 80px;
@@ -975,8 +983,12 @@ pre {
 		color: #627e90 !important;
 		font-family: 'proxima-nova', serif;
 		transition: all 0.2s ease;
-		font-size: 16px !important;
+		font-size: 17px !important;
 		font-weight: 500 !important;
+
+		&:hover{
+			cursor: pointer;
+		}
 	}
 }
 
@@ -1447,6 +1459,8 @@ p {
 
 				a {
 					color: white;
+					 font-weight: 100;
+					 font-size: 17px;
 				}
 
 				&:hover > a {
@@ -1785,24 +1799,16 @@ p {
 
 	.main-header {
 		@media(max-width: 800px) {
-			padding: 10px 0;
+			padding: 30px 0;
 		}
 	}
 
 	.main-header {
 		border: 0;
 
-		.branding {
-			display: none;
-		}
-
 		a {
 			color: white;
 		}
-	}
-
-	#main-menu li {
-		padding: 20px 0;
 	}
 
 	.row {
@@ -1830,10 +1836,9 @@ p {
 							padding: 0;
 
 							li {
-								padding: 20px 0;
 
 								a {
-									font-weight: 500;
+									font-weight: 100;
 								}
 							}
 						}
@@ -1980,7 +1985,6 @@ p {
 		transition: all 0.2s ease-out;
 		position: relative;
 		overflow: hidden;
-		min-height: 150px;
 		opacity: 0;
 
 		img {
@@ -2024,13 +2028,16 @@ p {
 				width: 97%;
 			}
 
-			p:nth-of-type(1) {
+			.description {
 				color: @text-color;
 				margin: 10px 0;
 				font-size: 13px;
 				line-height: 1.3;
-				height: 47px;
 				overflow: hidden;
+			}
+
+			.author {
+				margin:0;
 			}
 
 			img {
@@ -2074,8 +2081,8 @@ p {
 	position: relative;
 	min-height: 300px;
 
-	img {
-		max-width: 95%;
+	.loader {
+		width: 50%;
 		border: 0 !important;
 		margin: auto;
 		display: block;
@@ -2083,6 +2090,8 @@ p {
 		z-index: 40;
 		right: 0;
 		left: 0;
+		top: 0;
+		bottom: 0;
 	}
 
 	.activity {
@@ -2165,7 +2174,7 @@ p {
 		.body {
 			padding: 20px 30px;
 			background: #f9f9f9;
-			height: 250px;
+			height: 400px;
 			transition: all 0.4s ease-in-out;
 			transform-origin: top;
 			overflow: hidden;
@@ -2227,15 +2236,20 @@ p {
 				color: #909090;
 				width: fit-content;
 				width: 50%;
-				@media(max-width: 800) {
+
+				.date {
+					margin-right: 10px;
+					color: @text-color-heading;
+					font-weight: 600;
+					font-size: 16px;
+				}
+
+				@media(max-width: 800px) {
 					width: 100%;
 				}
 			}
 
-			.date {
-				margin-right: 10px;
-				color: @white;
-			}
+
 		}
 
 		.time {
